tests/errors/e_pxdimpl.pyx
cimport e_pxdimpl_imported

_ERRORS = """
6:4: function definition not allowed here
18:4: function definition not allowed here
23:8: function definition not allowed here
"""
